--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -185,7 +185,7 @@ input {
     border-width: 0px 0px 0px 6px;
     border-color: #75a0f7;
     cursor: pointer;
-    width: 85%;
+    width: 75%;
     font-size: 24px;
     font-family: 'PT Mono', monospace;
     text-align: left;
@@ -330,4 +330,9 @@ input {
     height: 600px;
     margin-right: 10px;
     margin-top: 15px;
+}
+#delbut {
+    background-color: #ce3535;
+    font-size: 18px;
+    font-weight: bold;
 }
