Adding resource display on main page

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{ViewData["Title"] = "Home Page"; }
 
-@model PostsListViewModel
+@model PostsListAndResourcesViewModel
 
     <div id="sidebar">
         <a asp-area="broadcast" asp-controller="live" asp-action="watch"><img src="~/images/buttonbeta.png" id="streamimage"></a>
@@ -14,6 +14,12 @@
             <div>
                 @foreach (var post in Model.posts) { 
                     <a>@post.Author.UserName : @post.Name</a>
+                    <br>
+                }
+            </div>
+            <div>
+                @foreach (var resource in Model.resources) { 
+                    <a href="">@resource.Author.UserName : @resource.Name</a>
                     <br>
                 }
             </div>
