Changes to home page

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Forum/Views/Posts/Index.cshtml
@@ -3,6 +3,7 @@
     <h1 id="forumlogo">Forum</h1>
     <div id="forumside">
         <a href="/forum/posts/createpost"><button type="button" class="btns" id="threadpostbut">Post a thread</button></a>
+        <p class="anotext">Stream</p>
         <a asp-area="broadcast" asp-controller="live" asp-action="watch"><img src="~/images/buttonbeta.png" id="streamimage"></a>
     </div>
 
