--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{ViewData["Title"] = "Home Page"; }
 
 @model PostsListViewModel
-
+    <div class="coolpic" id="homepic"></div>
     <div id="sidebar">
         <p class="anotext">Stream</p>
         <a asp-area="broadcast" asp-controller="live" asp-action="watch"><img src="~/images/buttonbeta.png" id="streamimage"></a>
