--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
@@ -4,43 +4,33 @@
 @model PostsListAndResourcesViewModel
 
 =======
-@model PostsListViewModel
     <div class="coolpic" id="homepic"></div>
->>>>>>> 458ca2aa89088fdb59158fd943c4d8c789b0179d
     <div id="sidebar">
         <p class="anotext">Stream</p>
         <a asp-area="broadcast" asp-controller="live" asp-action="watch"><img src="~/images/buttonbeta.png" id="streamimage"></a>
         <p class="anotext">Latest from forum:</p>
-            <div id="forumNewest">
-<<<<<<< HEAD
-                <div class="forumcontent"><p class="threadtitle">C# блабла</p></div>
-                <div class="forumcontent"><p class="threadtitle">HTML и CSS не правят контакт</p></div>
-                <div class="forumcontent"><p class="threadtitle">Блабла</p></div>
-                <div class="forumcontent"><p class="threadtitle">fedw</p></div>
-            </div>
 
-            <div>
-                @foreach (var post in Model.posts) { 
-                    <a>@post.Author.UserName : @post.Name</a>
-                    <br>
-                }
-            </div>
-            <div>
-                @foreach (var resource in Model.resources) { 
-                    <a href="">@resource.Author.UserName : @resource.Name</a>
-                    <br>
-                }
-            </div>
-=======
-                @foreach (var post in Model.posts)
-                {
-                    <div class="forumcontent"><a class="threadtitle">@post.Author.UserName : @post.Name</a></div>
-                        }
-                    </div>
->>>>>>> 458ca2aa89088fdb59158fd943c4d8c789b0179d
-</div>
-<!--<div class="forumcontent"><p class="threadtitle">C# блабла</p></div>
-<div class="forumcontent"><p class="threadtitle">HTML и CSS не правят контакт</p></div>
-<div class="forumcontent"><p class="threadtitle">Блабла</p></div>
-<div class="forumcontent"><p class="threadtitle">fedw</p></div>-->
+        <!--<div id="forumNewest">
+        <div class="forumcontent"><p class="threadtitle">C# блабла</p></div>
+        <div class="forumcontent"><p class="threadtitle">HTML и CSS не правят контакт</p></div>
+        <div class="forumcontent"><p class="threadtitle">Блабла</p></div>
+        <div class="forumcontent"><p class="threadtitle">fedw</p></div>
+        </div>-->
+
+        <div>
+            @foreach (var post in Model.posts)
+            {
+                <div class="forumcontent"><a class="threadtitle">@post.Author.UserName : @post.Name</a></div>
+            }
+        </div>
+        <div>
+            @foreach (var resource in Model.resources)
+        {
+            <a href="">@resource.Author.UserName : @resource.Name</a>
+            <br>
+    }
+        </div>
+
+    </div>
+
 
