--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
@@ -27,7 +27,7 @@
         <center><input type="file" name="file" placeholder="Choose File" /></center>
         <input type="hidden" name="author" value="@User.Identity.Name" />
         <input type="hidden" name="currentpath" value="@Model.Path" />
-        <input class="btns" type="submit" value="Add resource" />
+        <input class="btns" type="submit" value="Add resource">
     </form>
     <h3 id="reslab">Resources:</h3>
     <br />
@@ -43,7 +43,7 @@
             <ul style="list-style-type: none;">
                 @foreach (var resource in Model.Resources)
                 {
-                    <li><a href="/resources/manage/downloadresource?currentpath=/resources/@resource.FilePath"><button class="fileresults"><i class="fas fa-file resicon"></i>"Resource - @resource.Name by @resource.AuthorName</button></a> <a href="/resources/manage/removefile?resourceid=@resource.Id"><button class="btns" id="delbut">Delete</button></a></li>
+                    <li><a href="/resources/manage/downloadresource?currentpath=/resources/@resource.FilePath"><button class="fileresults"><i class="fas fa-paperclip resicon"></i>"Resource - @resource.Name by @resource.AuthorName</button></a> <a href="/resources/manage/removefile?resourceid=@resource.Id"><button class="btns" id="delbut">Delete</button></a></li>
                 }
             </ul>
         </div>
