--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -166,7 +166,7 @@ input {
     border-width: 0px 0px 0px 6px;
     border-color: black;
     cursor: pointer;
-    width: 50%;
+    width: 60%;
     font-size: 24px;
     font-family: Roboto;
     text-align: left;
@@ -196,6 +196,7 @@ input {
 }
 #forumtitle {
     font-family: 'PT Mono', monospace;
+    font-size: 25px;
 }
 #threadpostbut {
     background-color: black;
@@ -300,10 +301,6 @@ input {
     font-size: 22px;
     background-color: black;
 }
-#idk {
-    background-image:url(../images/escheresque_ste.png);
-    background-repeat: repeat;
-}
 #livestream {
     border-style: solid;
     border-color: #6468D6;
@@ -355,4 +352,7 @@ input {
 #homepic {
     background: linear-gradient( rgba(0,0,0, 0.13), rgba(0,0,0, 0.13)),url(../images/nav.jpg);
     background-size: cover;
+}
+#idk {
+    background-color: #e3eaf4;
 }
