Tiny changes so i can pull

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -276,6 +276,7 @@ input {
     width: 50vw;
     height: 6vh;
     text-align: left;
+    font-family:'Times New Roman', Times, serif;
 }
 #forumf {
     display: inline-block;
