--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Account/Login.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Account/Login.cshtml
@@ -66,7 +66,7 @@
                             <p>
                                 @foreach (var provider in loginProviders)
                                 {
-                                    <button type="submit" class="btns" id ="facebutton" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-facebook-square resicon"></i>@provider.Name</button>
+                                    <button type="submit" class="btns facebutton" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-facebook-square resicon"></i>@provider.Name</button>
                                 }
                             </p>
                         </div>
