--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Manage/TwoFactorAuthentication.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Manage/TwoFactorAuthentication.cshtml
@@ -37,12 +37,14 @@
 <h5>Authenticator app</h5>
 @if (!Model.HasAuthenticator)
 {
-    <a asp-action="EnableAuthenticator" class="btn btn-default">Add authenticator app</a>
+    <a asp-action="EnableAuthenticator" class="btns au">Add authenticator app</a>
 }
 else
 {
-    <a asp-action="EnableAuthenticator" class="btn btn-default">Configure authenticator app</a>
-    <a asp-action="ResetAuthenticatorWarning" class="btn btn-default">Reset authenticator key</a>
+    
+        <a asp-action="EnableAuthenticator" class="btns">Configure authenticator app</a>
+        <a asp-action="ResetAuthenticatorWarning" class="btns">Reset authenticator key</a>
+    
 }
 
 @section Scripts {
