--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
@@ -43,7 +43,7 @@
             <ul style="list-style-type: none;">
                 @foreach (var resource in Model.Resources)
                 {
-                    <li><a href="/resources/manage/downloadresource?currentpath=/resources/@resource.FilePath"><button class="fileresults"><i class="fas fa-paperclip resicon"></i>"Resource - @resource.Name by @resource.AuthorName</button></a> <a href="/resources/manage/removefile?resourceid=@resource.Id"><button class="btns" id="delbut">Delete</button></a></li>
+                    <li><a href="/resources/manage/downloadresource?currentpath=/resources/@resource.FilePath"><button class="fileresults"><i class="fas fa-paperclip resicon"></i>"Resource - @resource.Name by @resource.AuthorName</button></a> <a href="/resources/manage/removefile?resourceid=@resource.Id"><button class="btns" id="delbut">Delete</button></a><a href="/resources/manage/addfavresource?resourceId=@resource.Id">Tag as a favourite!</a></li>
                 }
             </ul>
         </div>
