--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Home/Index.cshtml
@@ -6,20 +6,13 @@
         <p class="anotext">Stream</p>
         <a asp-area="broadcast" asp-controller="live" asp-action="watch"><img src="~/images/buttonbeta.png" id="streamimage"></a>
         <p class="anotext">Latest from forum:</p>
-
-        <!--<div id="forumNewest">
-        <div class="forumcontent"><p class="threadtitle">C# блабла</p></div>
-        <div class="forumcontent"><p class="threadtitle">HTML и CSS не правят контакт</p></div>
-        <div class="forumcontent"><p class="threadtitle">Блабла</p></div>
-        <div class="forumcontent"><p class="threadtitle">fedw</p></div>
-        </div>-->
-
         <div>
             @foreach (var post in Model.posts)
-            {
-                <div class="forumcontent"><a class="threadtitle">@post.Author.UserName : @post.Name</a></div>
-            }
+        {
+            <div class="forumcontent"><a class="threadtitle">@post.Author.UserName : @post.Name</a></div>
+    }
         </div>
+        <p class="anotext">Latest uploaded resources:</p>
         <div>
             @foreach (var resource in Model.resources)
             {
@@ -27,6 +20,15 @@
                 <br>
             }
         </div>
+        <p class="anotext">Favourite resources:</p>
+        <div>
+            @foreach (var resource in Model.favouriteResources)
+            {
+                <a href="">@resource.Name</a>
+                <br>
+            }
+        </div>
+
 
     </div>
 
