Near final changes on design

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/wwwroot/css/style.css
@@ -208,7 +208,7 @@ input {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     font-size: 40px;
-    color: white;
+    color: black;
 }
 
 .daform {
