--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/_ViewImports.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @using GoodGuysCommunity.Web.Models
 @using GoodGuysCommunity.Web.Models.AccountViewModels
 @using GoodGuysCommunity.Web.Models.ManageViewModels
+@using GoodGuysCommunity.Web.Areas.Broadcast.Models
+@using GoodGuysCommunity.Data.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
