Refactoring... fixed alot of bugs, added alert messages, handled errors/exceptions when handling invalid data, removed favorites because it didn't work v("/)v, improved some design elements, fixed naming conventions, used actual viewmodels instead of data models :facepalm:, probably alot of other stuff. I should have commited more often but got too frustrated.

--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/Home/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<StreamerListViewModel>
 @inject UserManager<User> UserManager
 
-@if (this.User.IsInRole("Streamer"))
+@if (this.User.IsInRole(WebConstants.StreamerRole))
 {
     if ((await this.UserManager.FindByNameAsync(this.User.Identity.Name)).IsLive)
     {
