--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_LoginPartial.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
         <ul class="navbar-nav">
             <li><a asp-area="Forum" asp-controller="Posts" asp-action="Index">Forum</a></li>
             <li><a asp-area="Resources" asp-controller="Browse" asp-action="Index">Resources</a></li>
-            <li><a asp-area="broadcast" asp-controller="Home" asp-action="Index">Broadcast</a></li>
+            <li><a asp-area="Broadcast" asp-controller="Home" asp-action="Index">Broadcast</a></li>
             <li>
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
