--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/style.css">
 </head>
 <body id="library">
-    <div class="coolpic" id="lpic"></div>
+    @*<div class="coolpic" id="lpic"></div>*@
     <div><h3 id="resheading">@Model.Name</h3></div>
     <div id="resub" class="breadcrumb">@Model.Path></div>
     <div style="text-align:center"><a href="/resources/browse?path=@prevPath"><button type="button" class="btns" id="backbut">Back</button></a></div>
@@ -33,6 +33,10 @@
     <br />
     <center>
         <div id="idfolder">
+            @if (!Model.Resources.Any() && !Model.Children.Any())
+            {
+                <h3>Empty :(</h3>
+            }
             <ul class="ar">
                 @foreach (var subfolder in Model.Children)
                 {
@@ -41,9 +45,22 @@
             </ul>
 
             <ul style="list-style-type: none;">
+
                 @foreach (var resource in Model.Resources)
                 {
-                    <li><a href="/resources/manage/downloadresource?currentpath=/resources/@resource.FilePath"><button class="fileresults"><i class="fas fa-paperclip resicon"></i>"Resource - @resource.Name by @resource.AuthorName</button></a> <a href="/resources/manage/removefile?resourceid=@resource.Id"><button class="btns" id="delbut">Delete</button></a><a href="/resources/manage/addfavresource?resourceId=@resource.Id">Tag as a favourite!</a></li>
+                    <li>
+                        <a href="/resources/manage/downloadresource?currentpath=/resources/@resource.FilePath">
+                            <button class="fileresults"><i class="fas fa-paperclip resicon"></i>"Resource - @resource.Name by @resource.AuthorName</button>
+                        </a>
+
+                        @if (resource.AuthorName == this.User.Identity.Name)
+                        {
+                            <a href="/resources/manage/removefile?resourceid=@resource.Id&currentPath=@Model.Path">
+                                <button class="btns" id="delbut">Delete</button>
+
+                            </a>
+                        }
+                    </li>
                 }
             </ul>
         </div>
