--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Manage/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Views/Manage/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using GoodGuysCommunity.Web.Models.ManageViewModels
+﻿@using GoodGuysCommunity.Web
+@using GoodGuysCommunity.Web.Models.ManageViewModels
 @model IndexViewModel
 @{
     ViewData["Title"] = "Profile";
@@ -13,7 +14,7 @@
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
             </div>
-            @if (this.User.IsInRole("Streamer"))
+            @if (this.User.IsInRole(WebConstants.StreamerRole))
             {
                 <div class="form-group">
                     <label asp-for="StreamKey"></label>
