--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Resources/Views/Browse/Index.cshtml
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/style.css">
 </head>
 <body id="library">
-    @*<div class="coolpic" id="lpic"></div>*@
+    <div class="coolpic" id="lpic"></div>
     <div><h3 id="resheading">@Model.Name</h3></div>
     <div id="resub" class="breadcrumb">@Model.Path></div>
     <div style="text-align:center"><a href="/resources/browse?path=@prevPath"><button type="button" class="btns" id="backbut">Back</button></a></div>
