--- a/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/Live/Watch.cshtml
+++ b/GoodGuysCommunity/GoodGuysCommunity.Web/Areas/Broadcast/Views/Live/Watch.cshtml
@@ -1,6 +1,6 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
+<div style="margin-left:10vw;margin-right:10vw">
+    <div>
+        <div>
             <div class="video-chat-wrapper">
                 <video id="livestream" class="video-js vjs-default-skin vjs-big-play-centered"
                        controls autoplay preload="auto"
@@ -9,9 +9,9 @@
                 </video>
             </div>
         </div>
-        <div class="col-md-12">
-            <div class="container" id="chatbox">
-
+        <div>
+            <div id="chatbox">
+                
                 <!--<input type="hidden" id="displayname" />-->
                 <ul id="discussion"></ul>
                 <div class="send-line">
@@ -24,6 +24,7 @@
             </div>
         </div>
     </div>
+    <script>$('#chatbox').scrollTop($('#chatbox')[0].scrollHeight);</script>
 </div>
 
 
